# task-digest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
task_digest/: __init__.py  __main__.py  cli.py  config.py  digest.py  logging.py  models.py  scheduler.py  service.py  settings_store.py
task_digest/anchor/: __init__.py  client.py
task_digest/llm/: __init__.py  base.py  openai_compatible.py
task_digest/telegram/: __init__.py  client.py
task_digest/vikunja/: __init__.py  client.py
tests/: conftest.py  test_anchor_client.py  test_config.py  test_digest.py  test_health.py  test_llm.py  test_logging.py  test_service.py  test_settings_store.py  test_telegram_client.py  test_telegram_commands.py  test_vikunja_client.py
tests/fixtures/: projects.json  tasks_page_1.json  tasks_page_2.json
